--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ html {
 
 .flexbox-container {
     display: flex;
+    background-color: aquamarine;
 }
 
 .flexbox-item {
@@ -17,4 +18,13 @@ html {
 
 .flexbox-item-2 {
     min-height: 20px;
+}
+
+table {
+    text-align: center;
+    width: 50%;
+    margin: 5px;
+    padding: 5px;
+    table-layout: fixed;
+    bottom: 10px;
 }
